apps/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: dashy-config
              mountPath: /app/user-data/conf.yml
              subPath: conf.yml
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
